# Test_CiSm

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py  sdfsd.py
alembic/versions/: 7c95a8aa2955_.py
app/: main.py
app/api/v1/endpoints/: tasks.py
app/core/: config.py  deps.py  logging_config.py  metrics.py
app/db/: session.py
app/models/: task.py
app/repositories/: task_repository.py
app/schemas/: task.py
app/services/: queue_service.py  task_service.py
app/workers/: task_worker.py
tests/: conftest.py
tests/test_api/: test_tasks.py
tests/test_services/: test_task_service.py
